Fixed image error on smaller screens in services

--- a/src/styles/components/_services.scss
+++ b/src/styles/components/_services.scss
@@ -92,9 +92,11 @@
                     }
                 }
 
-                img {
+                .img-container {
                     width: 50%;
-                    max-height: 20vw;
+                    img {
+                        max-height: 20vw;
+                    }
                 }
             }
         }
@@ -119,10 +121,12 @@
                     }
                 }
 
-                img {
-                    margin: 0 auto;
+                .img-container {
                     width: 100%;
-                    max-height: 50vw;
+                    img {
+                        margin: 0 auto;
+                        max-height: 50vw;
+                    }
                 }
             }
         }
