--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -538,8 +538,10 @@ nav .nav-toggle .cross .slice:nth-of-type(3) {
   .services .description .service-section .info p {
     font-size: 1.25rem;
   }
-  .services .description .service-section img {
+  .services .description .service-section .img-container {
     width: 50%;
+  }
+  .services .description .service-section .img-container img {
     max-height: 20vw;
   }
 }
@@ -556,9 +558,11 @@ nav .nav-toggle .cross .slice:nth-of-type(3) {
   .services .description .service-section .info p {
     font-size: 1.25rem;
   }
-  .services .description .service-section img {
-    margin: 0 auto;
+  .services .description .service-section .img-container {
     width: 100%;
+  }
+  .services .description .service-section .img-container img {
+    margin: 0 auto;
     max-height: 50vw;
   }
 }
